# CazFightstick

./: README.md  index.html  package.json  postcss.config.js  vite.config.ts
.github/workflows/: windows-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: VisualConfig.tsx
src/components/tabs/: ButtonTab.tsx  FirmwareDownloadTab.tsx  FirmwareTab.tsx  LedTab.tsx  SystemTab.tsx
