[package]
name = "cazfightstick-tauri"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = "2.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = "2.0.0-rc.13"
